--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "unc"
 version = "0.1.0"
 readme = "README.md"
-requires-python = "3.10"
+requires-python = ">=3.10"
 
 dependencies = [
 	'typing_extensions; python_version < "3.11"',
