add download uv step to pre-commit job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           python-version: "3.x"
       - uses: pre-commit/action@v3.0.1
+      - name: Download uv
+        uses: astral-sh/setup-uv@v6
       - name: Install pre-commit
         run: uv pip install pre-commit
       - name: Run pre-commit checks
