add venv creation to test-package job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
 
       - name: Download uv
         uses: astral-sh/setup-uv@v6
-
+      - name: Start venv
+        run: uv venv
+      - name: Install pytest
+        run: uv pip install pytest
       - name: Test package
         run: uv run pytest
