add dependency group to test-package job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         uses: astral-sh/setup-uv@v6
       - name: Start venv
         run: uv venv
-      - name: Install pytest
-        run: uv pip install pytest
+      - name: Install deps
+        run: uv pip install --test
       - name: Test package
         run: uv run pytest
